Manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
        resources:                                                       # Specifies resource requests and limits for the container.
          requests:                                                      # Minimum resources required for the container (512Mi of memory and 500m CPU).
            memory: "128Mi"
            cpu: "100m"
          limits:                                                        # Maximum resources the container can consume (1Gi of memory and 1 CPU).
            memory: "256Mi"
            cpu: "250m"
        livenessProbe:                                                   # A health check to determine if the container is still running and healthy.
            httpGet:                                                       # Sends an HTTP GET request to /healthz on port 80.
              path: /
        #      path: /healthz                                               
              port: 80
            initialDelaySeconds: 5                                         # Waits for 5 seconds before starting the probe.
            periodSeconds: 10                                              # Runs the probe every 10 seconds.
        readinessProbe:                                                  # Ensures that the container is ready to serve traffic. Similar to the liveness probe, but used to determine if the container is ready.
            httpGet:
         #     path: /
              path: /healthz
              port: 80
            initialDelaySeconds: 5                                        # Waits for 5 seconds before starting the probe.
            periodSeconds: 10                                             # Runs the probe every 10 seconds.
        startupProbe:                                                   # Ensures the container has started successfully before performing liveness or readiness checks.
            httpGet:
              path: /
        #      path: /health
              port: 80
            initialDelaySeconds: 10                                       # Waits for 10 seconds before starting the probe.
            periodSeconds: 5     
      #   volumeMounts:
      #   - name: nginx-log-volume
      #     mountPath: /var/log/nginx    
      # volumes:                                                            # Defines volumes to be used by the containers.
      #   # - name: config-volume
      #   #   configMap:                                                       # Mounts a ConfigMap called nginx-config to provide the Nginx configuration.
      #   #     name: nginx-config
      #   - name: nginx-log-volume                                           # Uses a Persistent Volume Claim (nginx-pvc) for persistent storage of logs.
      #     persistentVolumeClaim:
      #       claimName: nginx-pvc

---
# PersistentVolume
# ----------------------------
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: nginx-pv
# spec:
#   capacity:
#     storage: 1Gi
#   accessModes:
#     - ReadWriteOnce
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: standard
#   hostPath:
#    path: /mnt/data/app
---
# ----------------------------
# PersistentVolumeClaim
# ----------------------------
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: nginx-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: gp2  
#   resources:
#     requests:
#       storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: service-2048
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: app-2048
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-2048
              port:
                number: 80
